<resources>
    <string name="app_name">Streambaba</string>
    <string name="continue_watching">Continue Watching</string>
    <string name="home_more_info">More info</string>
    <string name="search_poster_img_des">Poster</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_settings">Setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- genres -->
    <string name="Action">Action</string>
    <string name="Dramas">Dramas</string>
    <string name="anime">Anime</string>
    <string name="Horror">Horror</string>
    <string name="Romantic">Romantic</string>
    <string name="documentaries">Documentaries</string>
    <string name="Thrillers">Thrillers</string>
    <string name="TV_Shows">TV Shows</string>
    <string name="Sports">Sports</string>
    <string name="Sci_Fi">Sci-Fi</string>
    <string name="Fantasy">Fantasy</string>
    <string name="movies">Movies</string>
    <string name="search_hint">Search</string>
    <string name="app_version">1.0</string>
    <string name="commit_hash">051010f</string>
    <string name="extensions">Extensions</string>
    <string name="category_general">General</string>
    <string name="category_providers">Provider</string>
    <string name="category_ui">Layout</string>
    <string name="category_updates">Updates and backup</string>
    <string name="category_account">Accounts</string>
    <string name="locale_key">app_locale</string>
    <string name="app_language">App Language</string>
    <string name="legal_notice_key">legal_notice_key</string>
    <string name="legal_notice">Disclaimer</string>
    <string name="create_account">Create Account</string>
    <string name="example_username">Username</string>
    <string name="example_email">Email</string>
    <string name="example_ip">127.0.1.1</string>
    <string name="example_password">Password</string>
    <string name="login">Login</string>
    <string name="sort_cancel">Cancel</string>
    <string name="sort_apply">Apply</string>
    <string name="legal_notice_text">Any legal issues regarding the content on this application\n        should be taken up with the actual file hosts and providers themselves as we are not affiliated with them.\n\n        In case of copyright infringement, please directly contact the responsible parties or the streaming websites.\n\n        The app is purely for educational and personal use.\n\n        CloudStream 3 does not host any content on the app, and has no control over what media is put up or taken down.\n        CloudStream 3 functions like any other search engine, such as Google. CloudStream 3 does not host, upload or\n        manage any videos, films or content. It simply crawls, aggregates and displayes links in a convenient,\n        user-friendly interface.\n\n        It merely scrapes 3rd-party websites that are publicly accessable via any regular web browser. It is the\n        responsibility of user to avoid any actions that might violate the laws governing his/her locality. Use\n        at your own risk.</string>
    <string name="detail">detail</string>
    <string name="mal_key">mal_key</string>
    <string name="anilist_key">anilist_key</string>
    <string name="opensubtitles_key">opensubtitles_key</string>
    <string name="switch_account">Switch account</string>
    <string name="logout">Logout</string>
    <string name="login_format">%s %s</string>
    <string name="account">\naccount</string>
    <string name="version">App Version</string>
    <string name="manual_check_update_key">manual_check_update</string>
    <string name="Notification">Notification</string>
    <string name="none">None</string>
    <string name="home_play">Play</string>
    <string name="home_info">Info</string>
    <string name="home_expanded_hide">Hide</string>
    <string name="download">Download</string>
    <string name="play_movie">Play Movie</string>
    <string name="movies_poster">Movies poster</string>
    <string name="result_tags">Genres</string>
    <string name="back">Back</string>
    <string name="description">Description</string>
    <string name="episode">Episodes</string>
    <string name="resize_fit">Fit to screen</string>
    <string name="resize_fill">Stretch</string>
    <string name="resize_zoom">Zoom</string>
    <string name="subtitle_offset">Subtitle</string>
    <string name="audio">Audio</string>
    <string name="next_episode">Next Episode</string>
    <string name="previous_episode">Previous Episode</string>
    <string name="_5">5</string>
    <string name="resize">Resize</string>
</resources>