<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/primaryBlackBackground">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">


            <TextView
                android:id="@+id/settings_general"

                style="@style/SettingsItem"
                android:nextFocusDown="@id/settings_providers"
                android:text="@string/category_general" />



            <TextView
                android:id="@+id/settings_providers"
                style="@style/SettingsItem"
                android:nextFocusUp="@id/settings_general"
                android:nextFocusDown="@id/settings_updates"
                android:text="@string/category_providers" />


            <TextView
                android:id="@+id/settings_updates"
                style="@style/SettingsItem"

                android:nextFocusUp="@id/settings_providers"
                android:nextFocusDown="@id/settings_credits"
                android:text="@string/category_updates" />

            <TextView
                android:id="@+id/settings_credits"
                style="@style/SettingsItem"
                android:nextFocusUp="@id/settings_updates"
                android:text="@string/category_account" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/app_version"
                    android:textColor="?attr/textColor" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="•"
                    android:textColor="?attr/textColor" />

                <TextView
                    android:id="@+id/commit_hash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/commit_hash"
                    android:textColor="?attr/textColor" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>